<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:background="@drawable/color_palette_background"
    android:orientation="vertical"
    android:paddingHorizontal="20dp"
    android:paddingVertical="15dp">

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:textSize="20sp"
        android:paddingVertical="15dp"
        android:paddingLeft="5dp"
        android:text="@string/select_folders_color"/>

    <GridView
        android:id="@+id/color_grid"
        android:layout_width="match_parent"
        android:layout_height="fill_parent"
        android:numColumns="4"
        android:fadingEdge="none"
        android:fitsSystemWindows="true"
        android:gravity="center"
        android:horizontalSpacing="10dp"
        android:soundEffectsEnabled="true"
        android:stretchMode="columnWidth"
        android:verticalSpacing="10dp"/>

    <LinearLayout
        android:layout_marginTop="15dp"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:gravity="right"
        android:paddingHorizontal="10dp">

        <com.google.android.material.button.MaterialButton
            android:textColor="?attr/colorOnSecondaryContainer"
            android:id="@+id/negativeButton"
            android:text="@string/cancel"
            android:textSize="13sp"
            style="@style/Widget.MaterialComponents.Button.TextButton.Dialog"
            android:layout_marginStart="10dp"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"/>

        <com.google.android.material.button.MaterialButton
        android:id="@+id/positiveButton"
        android:text="@string/ok"
            android:textSize="13sp"
            android:backgroundTint="?attr/colorPrimary"
            android:textColor="?attr/colorOnPrimary"
            style="@style/Widget.MaterialComponents.Button.TextButton.Dialog"
        android:layout_marginStart="15dp"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"/>
    </LinearLayout>


</LinearLayout>
