<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:orientation="vertical"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:background="@drawable/filter_dialog_background"
    android:gravity="center"
    android:padding="10dp">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="horizontal"
        android:layout_marginTop="20dp"
        android:padding="20dp">

        <androidx.constraintlayout.widget.ConstraintLayout
            android:id="@+id/addLinkBox"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="1dp"
            android:animateLayoutChanges="true"
            android:background="@drawable/add_folder_background">


            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:gravity="center"
                android:orientation="vertical"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toStartOf="@+id/approveAddLinkButton"
                app:layout_constraintHorizontal_bias="0.5"
                app:layout_constraintStart_toEndOf="@+id/dismissAddLinkButton"
                app:layout_constraintTop_toTopOf="parent"
                tools:ignore="UnknownIdInLayout">

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginVertical="7dp"
                    android:background="@drawable/link_layout_add_background"
                    android:orientation="horizontal"
                    android:padding="15dp">

                    <LinearLayout
                        android:layout_width="wrap_content"
                        android:layout_height="match_parent"
                        android:gravity="center"
                        android:orientation="vertical"
                        android:paddingHorizontal="10dp">

                        <androidx.cardview.widget.CardView
                            android:id="@+id/colorCircle"
                            android:layout_width="30dp"
                            android:layout_height="30dp"
                            app:cardBackgroundColor="@color/blue"
                            app:cardCornerRadius="30dp"
                            tools:cardElevation="0dp"/>
                    </LinearLayout>


                    <LinearLayout
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:gravity="center_vertical"
                        android:orientation="vertical">

                        <EditText
                            android:id="@+id/linkName"
                            android:textColorHint="?attr/colorOnPrimary"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:background="@color/transparent"
                            android:hint="@string/title"
                            android:textColor="@color/white"
                            android:textSize="17sp" />

                        <EditText
                            android:id="@+id/linkDescription"
                            android:textColorHint="?attr/colorOnPrimary"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:background="@color/transparent"
                            android:hint="@string/description"
                            android:textColor="@color/white_gently_dark"
                            android:textSize="12dp" />

                    </LinearLayout>

                </LinearLayout>

                <EditText
                    android:textColorHint="?attr/colorOnPrimary"
                    android:id="@+id/linkHref"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="20dp"
                    android:background="@drawable/link_layout_add_background"
                    android:hint="@string/url"
                    android:inputType="textUri"
                    android:padding="15dp"
                    android:textColor="@color/white_gently_dark"
                    android:textSize="12dp" />

            </LinearLayout>


        </androidx.constraintlayout.widget.ConstraintLayout>

    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:gravity="right">

        <Button
            android:id="@+id/negativeButton"
            android:text="@string/cancel"
            style="@style/Widget.MaterialComponents.Button.TextButton.Dialog"
            android:layout_marginStart="20dp"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"/>

        <Button
            android:id="@+id/positiveButton"
            style="@style/Widget.MaterialComponents.Button.TextButton.Dialog"
            android:text="@string/edit"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"/>

    </LinearLayout>

</LinearLayout>