<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:orientation="vertical"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:background="@drawable/filter_dialog_background"
    android:gravity="center"
    android:padding="10dp">


        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:layout_marginBottom="-10dp"
            android:layout_marginTop="10dp"
            android:gravity="center_vertical"
            android:paddingHorizontal="10dp">

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/edit_folder"
                android:layout_weight="1"
                android:textSize="20sp" />

            <ImageButton
                android:id="@+id/setFolderColorButton"
                android:layout_width="40dp"
                android:layout_height="40dp"
                android:background="@color/transparent"
                android:paddingHorizontal="5dp"
                android:paddingVertical="5dp"
                android:src="@drawable/ic_color_lens"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toStartOf="@+id/folder_background"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent" />

        </LinearLayout>

        <androidx.constraintlayout.widget.ConstraintLayout
            android:id="@+id/constraintLayout2"
            android:layout_width="250dp"
            android:layout_height="wrap_content"
            android:background="@color/transparent"
            android:padding="15dp"
            android:layout_marginHorizontal="15dp"
            android:layout_marginVertical="25dp"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.5"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent">

            <androidx.cardview.widget.CardView
                android:id="@+id/folder_bookmark"
                android:layout_width="100dp"
                android:layout_height="50dp"
                android:layout_marginLeft="10dp"
                android:layout_marginTop="-10dp"
                android:background="@color/transparent"
                app:cardBackgroundColor="@color/blue_lighter"
                app:cardCornerRadius="200dp"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent"
                tools:cardElevation="0dp" />

            <androidx.cardview.widget.CardView
                android:id="@+id/folder_background"
                android:layout_width="match_parent"
                android:layout_height="140dp"
                android:layout_marginTop="10dp"
                android:background="@color/transparent"
                app:cardBackgroundColor="@color/blue"
                app:cardCornerRadius="15dp"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent"
                tools:cardElevation="0dp">


                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:gravity="center"
                    android:orientation="vertical">

                    <EditText
                        android:id="@+id/folderNameInput"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:background="@color/transparent"
                        android:hint="@string/folder_name"
                        android:paddingHorizontal="15dp"
                        android:paddingBottom="0dp"
                        android:textAlignment="center"
                        android:textColor="@color/white"
                        android:textColorHint="?attr/colorOnSecondaryContainer"
                        android:textSize="22sp"
                        android:maxLength="@integer/folder_heading_max_characters"/>

                    <EditText
                        android:id="@+id/folderDescriptionInput"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:background="@color/transparent"
                        android:hint="@string/description"
                        android:paddingHorizontal="15dp"
                        android:textAlignment="center"
                        android:textColor="@color/white_gently_dark"
                        android:textColorHint="?attr/colorOnSecondaryContainer"
                        android:textSize="13sp"
                        android:maxLength="@integer/folder_description_max_characters"/>

                </LinearLayout>


            </androidx.cardview.widget.CardView>


        </androidx.constraintlayout.widget.ConstraintLayout>



    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:gravity="right">

        <Button
            android:id="@+id/negativeButton"
            android:text="@string/cancel"
            style="@style/Widget.MaterialComponents.Button.TextButton.Dialog"
            android:layout_marginStart="20dp"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"/>

        <Button
            android:id="@+id/positiveButton"
            style="@style/Widget.MaterialComponents.Button.TextButton.Dialog"
            android:text="@string/edit"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"/>

    </LinearLayout>

</LinearLayout>