<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:orientation="vertical"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:background="@drawable/filter_dialog_background"
    android:gravity="center"
    android:padding="10dp">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        android:padding="20dp"
        android:layout_marginBottom="5dp">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:gravity="center_vertical"
            android:layout_marginBottom="8dp">

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/add_link"
                android:textSize="20sp"
                android:layout_weight="1" />

            <ImageButton
                android:id="@+id/autoInfoLoadButton"
                android:layout_width="wrap_content"
                android:layout_height="35dp"
                android:background="@color/transparent"
                android:paddingHorizontal="5dp"
                android:paddingVertical="5dp"
                android:scaleType="fitCenter"
                android:adjustViewBounds="true"
                android:src="@drawable/ic_auto_magic" />

        </LinearLayout>

        <androidx.constraintlayout.widget.ConstraintLayout
            android:id="@+id/addLinkBox"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="1dp"
            android:animateLayoutChanges="true"
            android:background="@drawable/add_folder_background">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:gravity="center"
                android:orientation="vertical"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toStartOf="@+id/approveAddLinkButton"
                app:layout_constraintHorizontal_bias="0.5"
                app:layout_constraintStart_toEndOf="@+id/dismissAddLinkButton"
                app:layout_constraintTop_toTopOf="parent"
                tools:ignore="UnknownIdInLayout">

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginVertical="7dp"
                    android:background="@drawable/link_layout_add_background"
                    android:orientation="horizontal"
                    android:padding="5dp">

                    <Spinner
                        android:id="@+id/folder_spinner"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:backgroundTint="@color/white"
                        android:popupBackground="?attr/colorSecondaryVariant"/>

                </LinearLayout>

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginVertical="7dp"
                    android:background="@drawable/link_layout_add_background"
                    android:orientation="horizontal"
                    android:padding="15dp">

                    <LinearLayout
                        android:layout_width="wrap_content"
                        android:layout_height="match_parent"
                        android:gravity="center"
                        android:orientation="vertical"
                        android:paddingHorizontal="10dp">

                        <androidx.cardview.widget.CardView
                            android:id="@+id/colorCircle"
                            android:layout_width="30dp"
                            android:layout_height="30dp"
                            app:cardBackgroundColor="@color/blue"
                            app:cardCornerRadius="25dp"
                            tools:cardElevation="0dp" />
                    </LinearLayout>


                    <LinearLayout
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:gravity="center_vertical"
                        android:orientation="vertical">

                        <EditText
                            android:id="@+id/linkName"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:background="@color/transparent"
                            android:hint="@string/title"
                            android:textColor="@color/white"
                            android:textColorHint="?attr/colorOnSecondaryContainer"
                            android:textSize="17sp"
                            android:maxLength="@integer/link_heading_max_characters"/>

                        <EditText
                            android:id="@+id/linkDescription"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:background="@color/transparent"
                            android:hint="@string/description"
                            android:textColor="@color/white_gently_dark"
                            android:textColorHint="?attr/colorOnSecondaryContainer"
                            android:textSize="12dp"
                            android:maxLength="@integer/link_description_max_characters"/>

                    </LinearLayout>

                </LinearLayout>

                <EditText
                    android:id="@+id/linkHref"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="20dp"
                    android:background="@drawable/link_layout_add_background"
                    android:hint="@string/url"
                    android:inputType="textUri"
                    android:padding="15dp"
                    android:textColor="@color/white_gently_dark"
                    android:textColorHint="?attr/colorOnSecondaryContainer"
                    android:textSize="12dp" />

            </LinearLayout>


        </androidx.constraintlayout.widget.ConstraintLayout>

    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:gravity="right"
        android:paddingHorizontal="20dp"
        android:layout_marginBottom="5dp">

        <com.google.android.material.button.MaterialButton
            android:textColor="?attr/colorOnSecondaryContainer"
            android:id="@+id/negativeButton"
            android:text="@string/cancel"
            android:textSize="13sp"
            style="@style/Widget.MaterialComponents.Button.TextButton.Dialog"
            android:layout_marginStart="10dp"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"/>

        <com.google.android.material.button.MaterialButton
            android:id="@+id/positiveButton"
            android:text="@string/add"
            android:textSize="13sp"
            android:backgroundTint="?attr/colorPrimary"
            android:textColor="?attr/colorOnPrimary"
            style="@style/Widget.MaterialComponents.Button.TextButton.Dialog"
            android:layout_marginStart="15dp"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"/>

    </LinearLayout>

</LinearLayout>